--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,17 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.7.2</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.305</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
